--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -20,7 +20,7 @@ file_template: ":filename:"
 build:
   preview_env:
   - NEXT_PUBLIC_URL=https://satnaing.dev
-  - NEXT_PUBLIC_EMAIL=satnaing.dev@gmail.com
+  - NEXT_PUBLIC_EMAIL=felix.t.work@outlook.com
   preview_output_directory: ".next"
   install_dependencies_command: npm install
   preview_docker_image: forestryio/node:16
