--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "next-themes": "^0.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-rough-notation": "^1.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
