--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
-    "next": "^15.2.1",
+    "next": "^15.2.2",
     "next-themes": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-rough-notation": "^1.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "swiper": "^8.4.5"
@@ -30,7 +29,7 @@
     "@types/react": "19.0.10",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "^15.2.2",
     "postcss": "^8.4.32",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
